# Disease_prediction

./: CNAME  LICENSE  README.md  app.py  pyproject.toml  replit.nix  requirements.txt
models/: model_ann.h5  model_ann.joblib  model_ann.json  model_ann.onnx  model_ann.pkl  model_ann_db.joblib  model_ann_db.json  model_ann_db.onnx  model_ann_db.pkl  model_ann_hcc.joblib  model_ann_hcc.json  model_ann_hcc.onnx  model_ann_hcc.pkl  model_ann_hep.joblib  model_ann_hep.json  model_ann_hep.onnx  model_ann_hep.pkl  model_ann_par.joblib  model_ann_par.json  model_ann_par.onnx  model_ann_par.pkl  model_dt.joblib  model_dt_diabetes.joblib  model_dt_hcc.pkl  model_dt_hep.pkl  model_dt_par.pkl  model_gb.pkl  model_gb_diabetes.pkl  model_gb_hcc.pkl  model_gb_hep.pkl  model_gb_par.joblib  model_knn.pkl  model_knn_diabetes.pkl  model_knn_hcc.joblib  model_knn_hep.joblib  model_knn_par.pkl  model_lg.joblib  model_lg_diabetes.pkl  model_lg_hcc.joblib  model_lg_hep.pkl  (+16 more)
templates/: index.html  result.html
