[tool.poetry]
name = "repl_nix_Diseaseprediction"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.13"
Flask = "^2.3.2"
joblib = "^1.2.0"
scikit-learn = "^1.2.2"
onnxruntime = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
